add quick stats

--- a/gym/index.html
+++ b/gym/index.html
@@ -37,6 +37,9 @@
         <!-- AngularJS -->
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
 
+        <!-- Font Awesome -->
+        <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!--[if lt IE 9]>
           <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
@@ -120,9 +123,36 @@
 
                 <h2 class="sub-header">Quick Stats</h2>
 
-                Placeholder for quick stats
+                <h3>Least Utilised Equipments</h3>
 
-                <hr>
+                <div class="row">
+                    <div class="col-sm-4">
+                        <div class="thumbnail">
+                            <img src="../img/bike.jpg" alt="...">
+                            <div class="caption">
+                                <h3>No.1 Bicycle 9.8%</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="thumbnail">
+                            <img src="../img/chest machine.jpg" alt="...">
+                            <div class="caption">
+                                <h3>No.2 Chest Fly 10.2%</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="thumbnail">
+                            <img src="../img/dumbell.jpg" alt="...">
+                            <div class="caption">
+                                <h3>No.3 Dumbell 13.8%</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- <hr> -->
 
                 <div class="row">
                     <div class="col-md-12">
