--- a/index.html
+++ b/index.html
@@ -120,7 +120,34 @@
 
                 <h2 class="sub-header">Quick Stats</h2>
 
-                Placeholder for quick stats
+                <h3>Least Utilised Equipments</h3>
+
+                <div class="row">
+                    <div class="col-sm-4">
+                        <div class="thumbnail">
+                            <img src="img/bike.jpg" alt="...">
+                            <div class="caption">
+                                <h3>No.1 Bicycle 9.8%</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="thumbnail">
+                            <img src="img/chest machine.jpg" alt="...">
+                            <div class="caption">
+                                <h3>No.2 Chest Fly 10.2%</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="thumbnail">
+                            <img src="img/dumbell.jpg" alt="...">
+                            <div class="caption">
+                                <h3>No.3 Dumbell 13.8%</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
                 <hr>
 
