--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                         <div class="thumbnail">
                             <img src="img/bike.jpg" alt="...">
                             <div class="caption">
-                                <h3>No.1 Bicycle 9.8%</h3>
+                                <h3>No.1 Bicycle <span class="text-danger">9.8%</span></h3>
                             </div>
                         </div>
                     </div>
@@ -135,7 +135,7 @@
                         <div class="thumbnail">
                             <img src="img/chest machine.jpg" alt="...">
                             <div class="caption">
-                                <h3>No.2 Chest Fly 10.2%</h3>
+                                <h3>No.2 Chest Fly <span class="text-danger">10.2%</span></h3>
                             </div>
                         </div>
                     </div>
@@ -143,7 +143,7 @@
                         <div class="thumbnail">
                             <img src="img/dumbell.jpg" alt="...">
                             <div class="caption">
-                                <h3>No.3 Dumbell 13.8%</h3>
+                                <h3>No.3 Dumbell <span class="text-danger">13.8%</span></h3>
                             </div>
                         </div>
                     </div>
